# Tube_connect

./: .gitignore  CMakeLists.txt  README.md
include/: CellPickerInteractorStyle.h  Cylinder.h  Graph.h  Intersection.h  STLRender.h  Tube.h
res/: 100.stl  1000.stl  test1.stl  test3.stl
src/: CellPickerInteractorStyle.cpp  Cylinder.cpp  Graph.cpp  Intersection.cpp  STLRender.cpp  Tube.cpp  main.cpp
test/: CMakeLists.txt  CellPickerInteractorStyleTest.cpp  CylinderTest.cpp  STLRenderTest.cpp  main.cpp
test/basic/: CellPickerInteractorStyleTest.cpp  GraphTest.cpp  STLRenderTest.cpp  TubeTest.cpp
test/gtest/googlemock/docs/: CookBook.md
test/gtest/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h  gmock-spec-builders.h
test/gtest/googlemock/scripts/: upload.py
test/gtest/googlemock/scripts/generator/cpp/: ast.py  tokenize.py
test/gtest/googletest/docs/: primer.md
test/gtest/googletest/include/gtest/: gtest-test-part.h  gtest-typed-test.h  gtest.h
test/gtest/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util.h
test/gtest/googletest/samples/: sample1_unittest.cc
test/gtest/googletest/scripts/: pump.py
test/gtest/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest-test-part.cc  gtest.cc
test/res/: 100.stl  test1.STL  test2.STL  test2.stl  test3.STL  test3.stl
test/util/: LineUtilTest.cpp  TubeUtilTest.cpp  VectorUtilTest.cpp
ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  ui_MainWindow.h
util/: CellUtil.h  CircleUtil.h  LineUtil.h  TubeUtil.h  VectorUtil.h
vtkbool/: CMakeLists.txt
vtkbool-2.5.2/: CMakeLists.txt  Utilities.cxx  Utilities.h  vtkPolyDataBooleanFilter.cxx  vtkPolyDataBooleanFilter.h  vtkPolyDataContactFilter.cxx  vtkPolyDataContactFilter.h
vtkbool-2.5.2/libs/decomp/: CMakeLists.txt  Decomposer.cxx  Decomposer.h  test.cxx
vtkbool-2.5.2/libs/merger/: CMakeLists.txt  Merger.cxx  Merger.h  test.cxx
vtkbool-2.5.2/libs/merger/dev/: holes.json  holes2.json
vtkbool-2.5.2/libs/vp/: CMakeLists.txt  RmTrivials.cxx  RmTrivials.h  Tools.cxx  Tools.h  VisPoly.cxx  VisPoly.h  test.cxx  test2.cxx
vtkbool-2.5.2/libs/vp/dev/: complex.json  polys.json  special.json  untitled.html
vtkbool-2.6/: CMakeLists.txt  vtkPolyDataBooleanFilter.cxx
